--- a/src/main/resources/templates/claim-view.html
+++ b/src/main/resources/templates/claim-view.html
@@ -96,7 +96,7 @@
               </div>
               <hr class="border-0 mt-3" style="height: 3px;">
               <div class="col-12 mt-sm-3">
-                <textarea class="form-control border-0 fs-5 claim-input" rows="20" id="claim-content" readonly>[[${claim.content}]]</textarea>
+                <textarea class="form-control border-0 fs-5 claim-input" rows="20" id="claim-content" readonly spellcheck="false">[[${claim.content}]]</textarea>
               </div>
               <div class="mt-3">
               	<th:block th:if="${session.loginMember != null && (session.loginMember.id == claim.id || session.loginMember.role == 'ROLE_ADMIN')}">
