--- a/src/main/resources/templates/mypage-7.html
+++ b/src/main/resources/templates/mypage-7.html
@@ -167,7 +167,7 @@
 									id="subscribe_me" onclick="checkSelectAll()">&nbsp;&nbsp;
 									<a class="d-block flex-shrink-0 mx-auto me-sm-4"
 									href="shop-single-v1.html" style="width: 10rem;"><img
-										src="img/ukids/toy1.JPG" alt="Product"></a>
+										th:src="${cart.toyImg}" alt="Product" th:if="${cart.toyImg != null}"></a>
 									<div class="pt-2">
 										<h3 class="product-title fs-base mb-2">
 											<a href="shop-single-v1.html">[[${cart.toyNm1}]]</a>
